<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="primaryData"
            type="com.example.registration.viewModel.UserViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none"
        tools:context=".view.fragment.PrimaryDetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <include
                android:id="@+id/primaryAppbar"
                layout="@layout/appbar" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profileImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/primaryAppbar"
                app:shapeAppearanceOverlay="@style/profile_shape"
                android:scaleType="fitCenter"
                />

            <ImageButton
                android:id="@+id/btnSelectProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/change_pick"
                android:src="@drawable/ic_edit"
                app:layout_constraintBottom_toBottomOf="@+id/profileImage"
                app:layout_constraintEnd_toEndOf="@+id/profileImage"
                app:layout_constraintStart_toEndOf="@+id/profileImage"
                app:layout_constraintTop_toTopOf="@+id/profileImage" />

            <TextView
                android:id="@+id/txtTitleFirstName"
                style="@style/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_title_firstname"
                app:layout_constraintTop_toBottomOf="@id/profileImage" />

            <EditText
                android:id="@+id/txtFirstName"
                style="@style/editTextCommon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person"
                android:hint="@string/hint_firstname"
                android:inputType="textCapWords"
                android:text="@={primaryData.userPrimaryData.firstName}"
                android:importantForAccessibility="yes"
                app:layout_constraintTop_toBottomOf="@id/txtTitleFirstName" />

            <TextView
                android:id="@+id/txtTitleLastName"
                style="@style/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_title_lastname"
                app:layout_constraintTop_toBottomOf="@id/txtFirstName" />

            <EditText
                android:id="@+id/txtLastName"
                style="@style/editTextCommon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person"
                android:hint="@string/hint_lastname"
                android:inputType="textCapWords"
                android:text="@={primaryData.userPrimaryData.lastName}"
                app:layout_constraintTop_toBottomOf="@id/txtTitleLastName" />

            <TextView
                android:id="@+id/txtTitlePhoneNumber"
                style="@style/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_title_phone"
                app:layout_constraintTop_toBottomOf="@id/txtLastName" />

            <EditText
                android:id="@+id/txtPhoneNumber"
                style="@style/editTextCommon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_phone"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:maxLength="10"
                android:text="@={primaryData.userPrimaryData.phoneNumber}"
                app:layout_constraintTop_toBottomOf="@id/txtTitlePhoneNumber" />

            <TextView
                android:id="@+id/txtTitleMail"
                style="@style/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_title_email"
                app:layout_constraintTop_toBottomOf="@id/txtPhoneNumber" />

            <EditText
                android:id="@+id/txtMail"
                style="@style/editTextCommon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_mail"
                android:hint="@string/txt_email"
                android:inputType="textEmailAddress"
                android:text="@={primaryData.userPrimaryData.email}"
                app:layout_constraintTop_toBottomOf="@id/txtTitleMail" />

            <TextView
                android:id="@+id/txtTitleGender"
                style="@style/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_title_gender"
                app:layout_constraintTop_toBottomOf="@id/txtMail" />

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@id/txtTitleGender">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_txt_male" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_txt_female" />
            </RadioGroup>

            <TextView
                android:id="@+id/txtTitlePassword"
                style="@style/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_title_password"
                app:layout_constraintTop_toBottomOf="@id/rgGender" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/editTextCommon"
                app:layout_constraintTop_toBottomOf="@id/txtTitlePassword">

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_lock"
                    android:hint="@string/hint_password"
                    android:drawablePadding="5dp"
                    android:inputType="textPassword"
                    android:text="@={primaryData.userPrimaryData.password}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ibShowPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/ibShowPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_show_password"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/txtPassword"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@android:color/transparent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/txtTitleConfirmPassword"
                style="@style/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_title_confirmPassword"
                app:layout_constraintTop_toBottomOf="@id/layoutPassword" />

            <EditText
                android:id="@+id/txtConfirmPassword"
                style="@style/editTextCommon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/hint_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:text="@={primaryData.userPrimaryData.confirmPassword}"
                app:layout_constraintTop_toBottomOf="@id/txtTitleConfirmPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNext"
                style="@style/btn_common"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_txt_next"
                app:layout_constraintTop_toBottomOf="@id/txtConfirmPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>