<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="primaryData"
            type="com.example.registration.viewModel.UserViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.ExperienceDetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <include
                android:id="@+id/appbarYourInfo"
                layout="@layout/appbar" />

            <TextView
                android:id="@+id/txtHeaderEducation"
                style="@style/txt_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_header_education"
                app:layout_constraintTop_toBottomOf="@id/appbarYourInfo" />

            <TextView
                android:id="@+id/txtTitleEducation"
                style="@style/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spn_title_education"
                app:layout_constraintTop_toBottomOf="@id/txtHeaderEducation" />

            <LinearLayout
                android:id="@+id/layoutEducation"
                style="@style/styleSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txtTitleEducation">

                <Spinner
                    android:id="@+id/spnEducation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/spinner_prompt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    />
            </LinearLayout>
            <TextView
                android:id="@+id/error_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="visible"
                android:text="Error message here"
                app:layout_constraintTop_toBottomOf="@id/layoutEducation"
                app:layout_constraintStart_toStartOf="@id/layoutEducation"/>

            <TextView
                android:id="@+id/txtTitlePassingYear"
                style="@style/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spn_title_passingYear"
                app:layout_constraintTop_toBottomOf="@id/error_text_view" />

            <LinearLayout
                android:id="@+id/layoutPassingYear"
                style="@style/styleSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txtTitlePassingYear">

                <Spinner
                    android:id="@+id/spnPassingYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView
                android:id="@+id/error_text_view_passingYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="visible"
                android:text="Error message here"
                app:layout_constraintTop_toBottomOf="@id/layoutPassingYear"
                app:layout_constraintStart_toStartOf="@id/layoutPassingYear"/>

            <TextView
                android:id="@+id/txtTitleGrade"
                style="@style/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_title_grade"
                app:layout_constraintTop_toBottomOf="@id/error_text_view_passingYear" />

            <EditText
                android:id="@+id/txtGrade"
                style="@style/editTextCommon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_grade"
                android:inputType="textCapCharacters"
                android:maxLength="1"
                android:text="@={primaryData.userProfessionalData.grade}"
                app:layout_constraintTop_toBottomOf="@id/txtTitleGrade" />

            <View
                android:id="@+id/midline"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="15dp"
                android:background="@drawable/midline"
                app:layout_constraintTop_toBottomOf="@id/txtGrade"
                tools:layout_editor_absoluteX="20dp" />

            <TextView
                android:id="@+id/txtHeaderProfessional"
                style="@style/txt_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_header_professional"
                app:layout_constraintTop_toBottomOf="@id/midline" />

            <TextView
                android:id="@+id/txtTitleExperience"
                style="@style/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_title_experience"
                app:layout_constraintTop_toBottomOf="@id/txtHeaderProfessional" />

            <EditText
                android:id="@+id/txtExperience"
                style="@style/editTextCommon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_experience"
                android:inputType="number"
                android:maxLength="2"
                android:text="@={primaryData.userProfessionalData.experience}"
                app:layout_constraintTop_toBottomOf="@id/txtTitleExperience" />


            <TextView
                android:id="@+id/txtTitleDesignation"
                style="@style/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_title_designation"
                app:layout_constraintTop_toBottomOf="@id/txtExperience" />

            <LinearLayout
                android:id="@+id/layoutDesignation"
                style="@style/styleSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txtTitleDesignation">

                <Spinner
                    android:id="@+id/spnDesignation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView
                android:id="@+id/error_text_view_designation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="visible"
                android:text="Error message here"
                app:layout_constraintTop_toBottomOf="@id/layoutDesignation"
                app:layout_constraintStart_toStartOf="@id/layoutDesignation"/>

            <TextView
                android:id="@+id/txtTitleDomain"
                style="@style/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_title_domain"
                app:layout_constraintTop_toBottomOf="@id/error_text_view_designation" />

            <LinearLayout
                android:id="@+id/layoutDomain"
                style="@style/styleSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txtTitleDomain">

                <Spinner
                    android:id="@+id/spnDomain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_domain" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPrevious"
                style="@style/btn_previous"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_txt_previous"
                app:layout_constraintEnd_toStartOf="@id/btnProfessionalNext"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutDomain" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnProfessionalNext"
                style="@style/btn_common"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_txt_next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnPrevious"
                app:layout_constraintTop_toBottomOf="@id/layoutDomain" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>